# dong

./: .codebuddyignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEBUDDY.md  CONTRIBUTING.md  LICENSE  README.md  compile.md  htmls.md  run.cmd
dong/: .gitignore  CMakeLists.txt  CSS_ENV_FUNCTION_REPORT.md  CSS_GLOBAL_KEYWORDS_REPORT.md  analyze_screenshot  analyze_screenshot.cpp  build.env.android.example  build.env.example  build.env.ios.example  build.env.macos.example  build.env.ohos.example  build.env.windows.example  build.zig  build.zig.zon  cmake_build_out.txt  compile.txt  complex_dom_test.ppm  event_system_test.ppm  font_system_test.ppm  hello_demo.ppm  image_loading_test.ppm  package.json  painter.cpp  run_preact_baselines.py  run_profile.bat  run_profile.ps1  run_test.bat  saved_targets.txt  simple_demo.ppm  style_event_integration_test.ppm  test_css_global_keywords.sh
dong/ai_working/ddd/: docs_index.txt  plan.md
dong/appcore/: CMakeLists.txt
dong/appcore/include/: dong_app.h  dong_dock.h  dong_math.h  dong_overlay.h  dong_scene3d.h
dong/appcore/src/: app.c  dock.c  dock_api_misc.c  dock_drag.c  dock_events.c  dock_internal.h  dock_layout_io.c  dock_lifecycle.c  dock_pane.c  dock_pane_api.c  dock_render.c  dock_split.c  dock_stub_gpu.c  dock_title.c  dock_window.c  overlay.c  overlay_stub_gpu.c  scene3d.c  scene3d_gpu.c  scene3d_world_gpu.cpp  scene3d_world_gpu.h
dong/apps/dong_app/: CMakeLists.txt
dong/backends/gpu/: CMakeLists.txt  dong_gpu_app_platform.c  dong_gpu_app_platform.h  dong_gpu_backend_driver.h  dong_gpu_image_decoder.c  dong_gpu_image_decoder.h  dong_gpu_platform.c  dong_gpu_platform.h  gpu_gpu_driver.cpp  gpu_gpu_driver.hpp  gpu_gpu_driver_execute.cpp  gpu_gpu_driver_execute_dispatch.cpp  gpu_gpu_driver_execute_dispatch.hpp  gpu_gpu_driver_init.cpp  gpu_gpu_driver_slug.cpp  gpu_gpu_driver_ui_graph.cpp  gpu_gpu_driver_ui_graph.hpp  gpu_gpu_driver_vtable.cpp  gpu_gtc_service.cpp  gpu_gtc_service.hpp  gpu_image_atlas.cpp  gpu_image_atlas.hpp  gpu_pipeline_registry.cpp  gpu_pipeline_registry.hpp  gpu_resource_manager.cpp  gpu_resource_manager.hpp  gpu_shader_bindings.hpp  gpu_upload_queue.cpp  gpu_upload_queue.hpp  scene3d_world_draw.cpp  scene3d_world_draw.hpp
dong/backends/sdl/: CMakeLists.txt  dong_astc_encoder.c  dong_astc_encoder.h  dong_bc_encoder.c  dong_bc_encoder.h  dong_sdl_execute.cpp  dong_sdl_execute.h  dong_sdl_gpu_bridge.cpp  dong_sdl_gpu_bridge.h  dong_sdl_image_atlas.c  dong_sdl_image_atlas.h  dong_sdl_image_decoder.c  dong_sdl_image_decoder.h  dong_sdl_platform.c  dong_sdl_platform.h  dong_sdl_plugin.cpp  dong_sdl_plugin.h  gpu_texture_compressor.cpp  gpu_texture_compressor.hpp  sdl_glyph_atlas.cpp  sdl_glyph_atlas.hpp  sdl_gpu_device.cpp  sdl_gpu_device.hpp  sdl_gpu_driver.cpp  sdl_gpu_driver.hpp  sdl_gpu_driver_execute.cpp  sdl_gpu_driver_fonts.cpp  sdl_gpu_driver_init.cpp  sdl_gpu_driver_resources.cpp  sdl_gpu_painter.cpp  sdl_gpu_painter.hpp  sdl_gpu_surface.cpp  sdl_gpu_surface.hpp  sdl_input_adapter.cpp  sdl_input_adapter.hpp  sdl_shader_manager.cpp  sdl_shader_manager.hpp  sdl_window.cpp  sdl_window.hpp
dong/cmake/: DongGtc.cmake  PorfforScripts.cmake
dong/doc/debug/: multi_frame_render_debug.md
dong/docs/: BUILD_ARCHITECTURE.md  DEMO_COMMANDS.md
dong/examples/: 3d_rt.cpp  3d_screen.cpp  3d_screen_html.cpp  3d_screen_script.cpp  basic_demo.c  complete_demo.cpp  comprehensive_features_demo.cpp  dirty_rect_optimization_demo.cpp  dock_demo.c  dom_api_demo.cpp  dom_test.cpp  gpu_screenshot_analysis.cpp  gpu_screenshot_demo.cpp  gpu_screenshot_demo_basic_layout.cpp  gpu_screenshot_demo_fontonly.cpp  gpu_screenshot_demo_glyph_stress.cpp  gpu_texture_demo.cpp  gpu_view_demo.cpp  hdr_demo.c  html_render_test.cpp  html_render_test_gpu.cpp  image_rendering_demo.cpp  integration_demo.cpp  interactive_demo.cpp  interactive_demo_new.c  isolation_demo.cpp  js_api_test.cpp  js_event_demo.cpp  js_return_value_demo.cpp  msdf_cpu_render_test.cpp  msdf_soft_render.cpp  multiview_1js.cpp  offscreen_test.cpp  performance_demo.cpp  render_and_script_demo.cpp  sdl_gpu_demo.cpp  simple_demo.c  simple_offscreen.cpp  skia_cpu_demo.cpp  style_cascade_test.cpp  (+1 more)
dong/examples/3d_screens_simple/: main.c
dong/examples/data/: feature_test.html  hud.html  interative1.html  interative2.html  screen1.js  screen1_script.html  screen2.js  (+1 more)
dong/include/: dong.h  dong_backend.h  dong_clipboard.h  dong_decal.h  dong_drawlist.h  dong_file_system.h  dong_format_policy.h  dong_global_shared.h  dong_glyph_atlas.h  dong_gpu_atlas_ops.h  dong_gpu_driver.h  dong_gpu_format.h  dong_gtc.h  dong_http_client.h  dong_image_atlas.h  dong_image_decoder.h  dong_legacy_view.h  dong_logger.h  dong_platform.h  dong_plugin_api.h  dong_resource_pack.h  dong_sdl_gpu_formats.h  dong_surface.h  dong_texture_bake.h  dong_ui_graph.h  dong_ui_pass_bundle.h  dong_vector.h  dong_view.h  dong_world_overlay.h  dong_world_text.h
dong/preact/: README.md  build.mjs  package-lock.json  package.json
dong/react/: README.md  build.mjs  package-lock.json  package.json
dong/scripts/: analyze_profile.py  cross_compile.py  download_dxc.py  download_skia_prebuilt.ps1  generate_t13_inventory.ps1  orch.py  orch_watchdog.ps1  porffor_batch_explicit_ready.mjs  porffor_batch_migrate_direct.mjs  porffor_batch_migrate_remaining.mjs  porffor_batch_migrate_t12.mjs  porffor_batch_migrate_t14.mjs  porffor_batch_tag_blocked.mjs  porffor_blocked_reasons.mjs  porffor_compile.mjs  porffor_framework_compile.mjs  porffor_framework_compile.test.mjs  porffor_framework_lint.mjs  porffor_inline_handlers.mjs  porffor_lint.mjs  porffor_manifest.json  porffor_paths.mjs  porffor_snippet_compile.mjs  porffor_snippet_inventory.mjs  porffor_test_inventory.mjs  porffor_test_tags.mjs  porffor_test_tags.test.mjs  precompile_shaders.py  run-porffor-tests.mjs  setup_skia.bat  setup_skia.py  setup_skia.sh  skia.config.json
dong/src/: api_bindings.cpp  api_bindings_legacy.cpp
dong/tests/: CMakeLists.txt  cases.hpp  cases.json  test_image_atlas.c  test_image_decoder.c
dong/zig/: dong.zig
(+1149 files in other folders)
